--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -1,10 +1,14 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Will the roof of the building be able to support solar PV panels?
+    Will the roof of this building be able to structurally support solar PV panels?
 {% endblock %}
 
 {% block content %}
+
+{% if not 'None' | isIn(data['solar-exemptions']) %}
+    {{ '../funding/cost' | redirect | safe }}
+{% endif %}
 
 <div class="govuk-grid-row">
 
@@ -15,39 +19,19 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You must provide confirmation from a building expert, contractor or structural engineer that your roof can support solar PV panels for your full application. This grant does not fund the confirmation.
+                        Even if you are not installing a solar PV system, you must provide confirmation that the roof can support solar PV panels at full application.
                     </p>
 
                     <p class="govuk-hint">
-                        Your roof is exempt if:
+                        This confirmation must come from a building expert, contractor or structural engineer.
                     </p>
-
-                    <ul class="govuk-hint govuk-list govuk-list--bullet">
-                        <li>
-                            the building is listed
-                        </li>
-                        <li>
-                            the building is on a World Heritage Site
-                        </li>
-                        <li>
-                            you're upgrading an existing building and would not otherwise make changes to the roof
-                        </li>
-                        <li>
-                            the roof faces only north
-                        </li>
-                        <li>
-                            the roof is heavily shaded
-                        </li>
-                        <li>
-                            the roof does not have 100m<sup>2</sup> of clear roof space
-                        </li>
-                    </ul>
 
                 {% endset %}
 
                 {{ govukRadios ({
                     idPrefix: 'roof-support-for-solar-pv',
                     name: 'roof-support-for-solar-pv',
+                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will the roof of the building be able to support solar PV panels?',
@@ -64,7 +48,7 @@
                             value: 'Yes',
                             checked: true if data['roof-support-for-solar-pv'] == 'Yes',
                             attributes: {
-                                    'data-next': 'solar-pv-system'
+                                    'data-next': '../funding/cost'
                                 }
                         },
                         {
@@ -74,22 +58,9 @@
                             attributes: {
                                     'data-next': 'elim-roof-support-for-solar-pv'
                                 }
-                        },
-                        {    divider: 'or'
-
-                        },
-                        {
-                            text: 'My roof is exempt',
-                            value: 'My roof is exempt',
-                            checked: true if data['roof-support-for-solar-pv'] == 'My roof is exempt',
-                            attributes: {
-                                    'data-next': 'solar-pv-system'
-                                }
                         }
                     ]
                 }) }}
-
-                
 
                 {{ govukButton ({
                     html: 'Continue'
@@ -106,7 +77,7 @@
                     <span class="app-step-nav-related__pretitle">Eligibility</span>
                     </h2>
                     <p>
-                        The roof must be able to support solar PV panels, allowing for potential use in the future.
+                        You do not have to buy and install a solar PV system to be eligible for this grant.
                     </p>
                 </div>
             </div>
