poultry type question change

--- a/app/views/layinghens/current/eligibility/common/poultry-type.html
+++ b/app/views/layinghens/current/eligibility/common/poultry-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Which type of poultry is the project for?
+    Which type of poultry will be housed in this building?
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
                     name: 'poultry-type',
                     fieldset: {
                         legend: {
-                            text: 'Which type of poultry is the project for?',
+                            text: 'Which type of poultry will be housed in this building?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
