change log v3 updates

--- a/app/views/layinghens/current/eligibility/building/lighting.html
+++ b/app/views/layinghens/current/eligibility/building/lighting.html
@@ -34,12 +34,11 @@
                     </li>
 
                     <li>
-                        coverage of the entire floor-litter (scratch) area
+                        full coverage of the entire floor-litter (scratch) area
                     </li>
 
                     {% if poultryType == 'pullet' %}
                         <li>
-                        
                             a simulated stepped dawn and dusk 
                             (unless this is provided as part of a rearing aviary system)
                         </li>
