--- a/app/views/layinghens/current/eligibility/veranda/elim-size.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-size.html
@@ -13,15 +13,19 @@
            <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
             <p>
-                You must add a veranda if you have access to space next to the building that is either:
+                You must add a veranda if you have the required space.
+            </p>
+
+            <p>
+                The veranda must be at least either:
             </p>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    4 metres wide or more and along the length of the bird housing area
+                    4 metres wide along the length of the hen housing area
                 </li>
                 <li>
-                    30% or more of the indoor bird housing area footprint
+                    30% of the indoor hen housing area footprint
                 </li>
             </ul>
 
