--- a/app/views/layinghens/current/eligibility/veranda/size.html
+++ b/app/views/layinghens/current/eligibility/veranda/size.html
@@ -45,6 +45,9 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
+                    hint {
+                        html: hintHtml
+                    },
                     items: [
                         {
                             text: 'Yes',
