veranda size update

--- a/app/views/layinghens/current/eligibility/veranda/size.html
+++ b/app/views/layinghens/current/eligibility/veranda/size.html
@@ -45,7 +45,7 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
-                    hint {
+                    hint: {
                         html: hintHtml
                     },
                     items: [
