veranda size radios change

--- a/app/views/layinghens/current/eligibility/veranda/size.html
+++ b/app/views/layinghens/current/eligibility/veranda/size.html
@@ -37,7 +37,7 @@
                 {{ govukRadios ({
                     idPrefix: 'veranda-size',
                     name: 'veranda-size',
-                    classes: 'govuk-radios--inline',
+                    classes: 'govuk-radios',
                     fieldset: {
                         legend: {
                             text: 'Will the building have a veranda that is the required size?',
